2011-07-21    <Jim@X64PC>

	* Version 9.1.1

	* QtSpim/console.cpp, 	QtSpim/console.h, QtSpim/datatextedit.h,
	QtSpim/datawin.cpp, QtSpim/regtextedit.h, 	QtSpim/regwin.cpp,
	QtSpim/spimview.cpp, QtSpim/spimview.ui, QtSpim/texttextedit.h,
	QtSpim/textwin.cpp [Mario H. Voorsluys m.h.voorsluys@student.tudelft.nl]:
	Closing a window did not uncheck item on Windows menu.
	Eliminated empty toolbar.

2011-07-20    <Jim@X64PC>

	* QtSpim/breakpoint.ui QtSpim/menu.cpp, QtSpim/spimview.h, QtSpim/spimview.cpp [William Barrett wbarrett1076@comcast.net]:
	Provide more usable set of options at a breakpoint.

2011-07-18    <Jim@X64PC>

	* Version 9.1

2011-07-18  Jim Larus  <jim@linuxPC>

	* Setup/qtspim_debian_deployment/postinst:
	Register QtSpim help file after installation.

2011-07-17    <Jim@X64PC>

	* Setup/QtSpim_Win_Deployment/QtSpim-package.sln:
	Fixed VS deployment package to register/unregister help file when
	installing on new machine.
	Added image rendering plugins for jpegs.

	* main.cpp, menu.cpp, spimview.cpp, spimview.h, state.cpp:
	Added command line parsing to QtSpim.

	* CPU/spim.h, PCSpim/ConsoleWnd.cpp, PCSpim/SpimSupport.cpp,
	QtSpim/console.cpp, QtSpim/console.h, QtSpim/spim_support.c,
	Tests/read.s, spim/spim.c, xspim/xspim.c,
	QtSpim/help/HP_AppA.html:
	Better document the behavior of the console window in both
	memory_mapped and regular mode. None of the simulators, beyond
	spim, yet allows editing in either mode. Eliminate inconsistently
	implemented control-c processing, except in spim simulator.

	* QtSpim/spimview.cpp (closeEvent) [Mario H. Voorsluys m.h.voorsluys@student.tudelft.nl]:
	Close console window when main QtSpim window closes.

2011-07-16    <Jim@X64PC>

	* QtSpim/state.cpp (readSettings):
	If the size of the restored window exceeds the current screen
	size, resize the window.

	* CPU/run.c (start_CP0_timer) [Ed Harcourt (edharcourt1)]:
	Clean up non-Windows timer code to not reset timer until it has