@@ -1,3 +1,10 @@
+2011-07-22    <Jim@X64PC>
+
+	* QtSpim/datawin.cpp [William A. Barrett wbarrett1076@comcast.net]:
+	Fix data segment display to show ASCII chars on a partial line.
+	Only display printable ASCII chars.
+
+
 2011-07-21    <Jim@X64PC>
 
 	* Version 9.1.1
